--- a/PR146-CollapsingParallaxToolbar/app/src/main/AndroidManifest.xml
+++ b/PR146-CollapsingParallaxToolbar/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/activity_main_title" >
+            android:label="@string/main_title" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
