--- a/PR145-CollapsingToolbarLayout/app/build.gradle
+++ b/PR145-CollapsingToolbarLayout/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "com.google.android.material:material:1.0.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation "androidx.core:core:1.1.0-alpha03"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
