--- a/PR147-TabLayout/app/build.gradle
+++ b/PR147-TabLayout/app/build.gradle
@@ -27,7 +27,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "com.google.android.material:material:1.1.0-alpha02"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.core:core:1.1.0-alpha03"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
