--- a/PR249-SingleActivityMasterDetail/app/build.gradle
+++ b/PR249-SingleActivityMasterDetail/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation "androidx.recyclerview:recyclerview-selection:1.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
