--- a/PR050-ActionBar/app/build.gradle
+++ b/PR050-ActionBar/app/build.gradle
@@ -29,6 +29,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha3"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
