--- a/PR173-BottomSheetPermanente/app/build.gradle
+++ b/PR173-BottomSheetPermanente/app/build.gradle
@@ -26,7 +26,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "com.google.android.material:material:1.1.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
