--- a/PR138-Palette/app/build.gradle
+++ b/PR138-Palette/app/build.gradle
@@ -27,8 +27,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "androidx.palette:palette:1.0.0"
     implementation "com.squareup.picasso:picasso:2.5.2"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha3"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
