--- a/PR119-Almacenamiento/app/src/main/AndroidManifest.xml
+++ b/PR119-Almacenamiento/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +23,8 @@
         <!-- FileProvider para compartir archivos (necesario para proporcionar
      la URI del archivo al programa para mostrar el archivo -->
         <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="es.iessaladillo.pedrojoya.provider"
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="es.iessaladillo.pedrojoya.pr119.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
