--- a/PR211-SQLiteRoom/app/build.gradle
+++ b/PR211-SQLiteRoom/app/build.gradle
@@ -27,17 +27,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "com.google.android.material:material:1.1.0-alpha02"
+    implementation "androidx.recyclerview:recyclerview:1.1.0-alpha01"
     implementation "com.facebook.stetho:stetho:1.5.0"
     implementation "com.amulyakhare:com.amulyakhare.textdrawable:1.0.1"
     implementation "de.hdodenhof:circleimageview:2.2.0"
     implementation "com.squareup.picasso:picasso:2.5.2"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    implementation "androidx.room:room-runtime:2.0.0"
-    annotationProcessor "androidx.room:room-compiler:2.0.0"
-
-    testImplementation "androidx.room:room-testing:2.0.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha3"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
+    implementation "androidx.room:room-runtime:2.1.0-alpha03"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha03"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
