--- a/PR134-BroadcastReceiver/app/build.gradle
+++ b/PR134-BroadcastReceiver/app/build.gradle
@@ -27,7 +27,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha3'
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
