--- a/PR040-JSON/app/build.gradle
+++ b/PR040-JSON/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.5"
     implementation "com.squareup.picasso:picasso:2.5.2"
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
