--- a/PR131-AsyncTask/app/build.gradle
+++ b/PR131-AsyncTask/app/build.gradle
@@ -26,5 +26,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
