--- a/PR080-HTTPURLConnection/app/build.gradle
+++ b/PR080-HTTPURLConnection/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01"
     implementation "androidx.fragment:fragment:1.1.0-alpha03"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
 }
