--- a/PR080-HTTPURLConnection/app/src/main/AndroidManifest.xml
+++ b/PR080-HTTPURLConnection/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name="es.iessaladillo.pedrojoya.pr080.ui.main.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
