--- a/PR080-HTTPURLConnection/gradle/wrapper/gradle-wrapper.properties
+++ b/PR080-HTTPURLConnection/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Aug 16 09:11:47 CEST 2018
+#Wed Jan 16 12:29:48 CET 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
