--- a/PR102-AlarmManager/app/src/main/AndroidManifest.xml
+++ b/PR102-AlarmManager/app/src/main/AndroidManifest.xml
@@ -1,42 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="es.iessaladillo.pedrojoya.pr102">
+<manifest package="es.iessaladillo.pedrojoya.pr102"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <application
         android:name=".App"
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
         android:supportsRtl="true"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
-        android:fullBackupContent="@xml/backup_descriptor">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".ui.main.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/main_title">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".ui.reminder.ReminderActivity"
+            android:label="@string/reminder_title"/>
+        <activity
+            android:name=".ui.edit.EditActivity"
+            android:label="@string/edit_title"/>
         <receiver
-            android:name=".alarm.AlarmBroadcastReceiver"
-            android:exported="false" />
+            android:name=".reminder.ReminderReceiver"
+            android:exported="false"/>
         <receiver
-            android:name=".alarm.BootReceiver"
+            android:name=".reminder.ReminderBootReceiver"
             android:exported="false" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
     </application>
 
 </manifest>
