--- a/PR174-JobScheduler/app/build.gradle
+++ b/PR174-JobScheduler/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.livinglifetechway.quickpermissions_plugin'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr174"
@@ -28,5 +28,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "com.google.android.material:material:1.1.0-alpha03"
+    implementation "androidx.recyclerview:recyclerview:1.1.0-alpha01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02"
+    implementation "androidx.fragment:fragment:1.1.0-alpha03"
 }
