--- a/PR174-JobScheduler/app/src/main/AndroidManifest.xml
+++ b/PR174-JobScheduler/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="es.iessaladillo.pedrojoya.pr174"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
@@ -12,7 +13,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:fullBackupContent="@xml/backup_descriptor">
         <activity android:name=".ui.main.MainActivity">
@@ -23,8 +24,22 @@
             </intent-filter>
         </activity>
         <service
-                android:name=".reminder.ReminderService"
+                android:name=".services.ExportToTextFileService"
                 android:permission="android.permission.BIND_JOB_SERVICE"/>
+        <!-- FileProvider para compartir archivos (necesario para proporcionar
+        la URI del archivo al programa que lo visualice -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="es.iessaladillo.pedrojoya.pr174.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <!-- En file_paths indicamos las carpetas que se "compartirán" -->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths">
+            </meta-data>
+        </provider>
+
     </application>
 
 </manifest>
