--- a/PR152-PreferenceFragmentCompat/app/build.gradle
+++ b/PR152-PreferenceFragmentCompat/app/build.gradle
@@ -27,9 +27,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "androidx.preference:preference:1.1.0-alpha02"
-    implementation "androidx.legacy:legacy-preference-v14:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
+    implementation "androidx.preference:preference:1.1.0-alpha03"
+    implementation "androidx.fragment:fragment:1.1.0-alpha04"
+    implementation "com.google.android.material:material:1.1.0-alpha03"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha3"
 }
