--- a/PR046-ViewPager/app/build.gradle
+++ b/PR046-ViewPager/app/build.gradle
@@ -29,6 +29,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "com.google.android.material:material:1.1.0-alpha02"
-    implementation "androidx.fragment:fragment:1.1.0-alpha03"
+    implementation "com.google.android.material:material:1.1.0-alpha03"
+    implementation "androidx.fragment:fragment:1.1.0-alpha04"
+    implementation "androidx.viewpager2:viewpager2:1.0.0-alpha01"
 }
