--- a/PR104-Toolbar/app/build.gradle
+++ b/PR104-Toolbar/app/build.gradle
@@ -27,5 +27,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
 }
