--- a/PR104-Toolbar/app/src/main/AndroidManifest.xml
+++ b/PR104-Toolbar/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
-        android:fullBackupContent="@xml/backup_descriptor">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
@@ -19,6 +19,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.settings.SettingsActivity"
+            android:parentActivityName=".ui.main.MainActivity">
         </activity>
     </application>
 
