--- a/PR248-ToolbarNotAsActionBar/app/build.gradle
+++ b/PR248-ToolbarNotAsActionBar/app/build.gradle
@@ -27,5 +27,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
 }
