--- a/PR248-ToolbarNotAsActionBar/gradle/wrapper/gradle-wrapper.properties
+++ b/PR248-ToolbarNotAsActionBar/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Sep 20 23:34:21 CEST 2018
+#Fri Feb 15 22:56:59 CET 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
