--- a/PR066-NavigationDrawer/app/build.gradle
+++ b/PR066-NavigationDrawer/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "com.google.android.material:material:1.0.0"
-    implementation "androidx.fragment:fragment-ktx:1.1.0-alpha03"
+    implementation "androidx.fragment:fragment:1.1.0-alpha04"
 }
