--- a/PR018-MenuOpciones/app/build.gradle
+++ b/PR018-MenuOpciones/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02"
+    implementation "androidx.fragment:fragment:1.1.0-alpha04"
 }
