--- a/PR254-NavigationUI/app/build.gradle
+++ b/PR254-NavigationUI/app/build.gradle
@@ -25,12 +25,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation "com.google.android.material:material:1.1.0-alpha02"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01'
-    implementation 'androidx.core:core:1.1.0-alpha03'
-    implementation 'androidx.fragment:fragment:1.1.0-alpha03'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha11'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha11'
+    implementation "com.google.android.material:material:1.1.0-alpha03"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
+    implementation 'androidx.core:core:1.1.0-alpha04'
+    implementation 'androidx.fragment:fragment:1.1.0-alpha04'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-beta02'
+    implementation 'android.arch.navigation:navigation-ui:1.0.0-beta02'
 }
