--- a/PR254-NavigationUI/build.gradle
+++ b/PR254-NavigationUI/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha09'
+        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-beta02'
     }
 }
 
