--- a/PR191-BottomNavigationView/gradle/wrapper/gradle-wrapper.properties
+++ b/PR191-BottomNavigationView/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri May 11 16:41:45 CEST 2018
+#Wed Jan 16 11:06:28 CET 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
