--- a/PR102-AlarmManager/app/build.gradle
+++ b/PR102-AlarmManager/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02"
+    implementation "androidx.core:core:1.1.0-alpha04"
 }
