--- a/PR005-IntentsExplicitos/gradle/wrapper/gradle-wrapper.properties
+++ b/PR005-IntentsExplicitos/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Sep 24 09:08:24 CEST 2018
+#Wed Feb 20 17:11:48 CET 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
